lab1/https-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: https-pod
  labels:
    app: https
spec:
  containers:
  - name: container
    image: ghcr.io/wsjang5324/app
