lab1/od-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: od-pod
  labels:
    category: order
spec:
  containers:
  - name: container
    image: ghcr.io/wsjang5324/order
