lab1/sp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sp-pod
  labels:
    category: shopping
spec:
  containers:
  - name: sp
    image: ghcr.io/wsjang5324/shopping
