lab1/v2pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: v2pod
  labels:
    app: v2
spec:
  containers:
  - name: container
    image: ghcr.io/wsjang5324/app:v2
