lab1/ct-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ct-svc
spec:
  selector:
    category: customer
  ports:
  - port: 8080
