lab1/https-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: https-svc
spec:
  selector:
    app: https
  ports:
  - port: 8080
