lab1/od-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: od-svc
spec:
  selector:
    category: order
  ports:
  - port: 8080
