lab1/sp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sp-svc
spec:
  selector:
    category: shopping
  ports:
  - port: 8080
