lab1/v1svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: v1svc
spec:
  selector:
    app: v1
  ports:
  - port: 8080
