lab1/v2svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: v2svc
spec:
  selector:
    app: v2
  ports:
  - port: 8080
