lab1/https-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: https-ingress
spec:
  tls:
  - hosts:
    - www.https.com
    secretName: https-secret
  rules:
    - host: www.https.com
      http:
        paths:
        - backend:
            serviceName: https-svc
            servicePort: 8080
